FInalizando alteração para mapStructure